--- a/projeto-gestao-frontend-minimal/reports.html
+++ b/projeto-gestao-frontend-minimal/reports.html
@@ -44,7 +44,7 @@
       <main class="main">
         
 	<header class="reports-header">
-		<h1 class="reports-title">Relatórios de Produtividade</h1>
+		<h1 class="reports-title">🚀 Relatórios de Produtividade</h1>
 		<p class="reports-subtitle">Acompanhe métricas e indicadores de performance dos seus projetos</p>
 	</header>
 
